config/base/demo.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: v1
kind: Service
metadata:
  name: bob
  namespace: demo
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: bob
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob
  namespace: demo
  labels:
    app: bob
spec:
  selector:
    matchLabels:
      app: bob
  template:
    metadata:
      labels:
        app: bob
    spec:
      containers:
      - name: bob
        image: registry.k8s.io/e2e-test-images/agnhost:2.40
        command:
          - /agnhost
          - netexec
          - --http-port=8080
        ports:
          - containerPort: 8080
            name: http
        resources:
          requests:
            cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: alice
  namespace: demo
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: alice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alice
  namespace: demo
  labels:
    app: alice
spec:
  selector:
    matchLabels:
      app: alice
  template:
    metadata:
      labels:
        app: alice
    spec:
      containers:
      - name: alice
        image: registry.k8s.io/e2e-test-images/agnhost:2.40
        command:
          - /agnhost
          - netexec
          - --http-port=8080
        ports:
          - containerPort: 8080
            name: http
        resources:
          requests:
            cpu: 10m
